Intern lots more strings